fix (hack) overflow x

--- a/public/statics/global.css
+++ b/public/statics/global.css
@@ -25,6 +25,7 @@
 
 body {
   background-color: var(--secondary);
+  overflow-x: hidden;
 }
 
 footer,
